@@ -7,6 +7,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{txfonts}
+\usepackage{enumitem}
 
 % Misc setup
 \setcounter{tocdepth}{5}
