@@ -1,2 +1,3 @@
 [vacumm.misc.grid.basemap]
 proj=laea
+max_cache_size=50*1024*1024
